# LeSpell

./: .gitignore  BUILD.md  MANIFEST.in  PROJECT_SETUP_SUMMARY.md  README.md  SETUP.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
docs/: CAS_INTEGRATION.md
examples/: README.md  batch_processing.py  cas_spell_check.py  languagetool_generator.py  pyspellchecker_example.py  simple_spell_check.py  spelling_items.py
lespell/: __init__.py  core.py  reader.py  utils.py  writer.py
lespell/analysis/: __init__.py  evaluation.py  utils.py
lespell/data_prep/: __init__.py  base.py  cita.py  convert_cita.py  convert_litkey.py  convert_toefl.py  litkey.py  toefl.py
lespell/integrations/: __init__.py  base.py  hunspell.py  languagetool.py  pyspellchecker.py
lespell/io/: __init__.py  reader.py  writer.py
lespell/languagetool/: __init__.py  integration.py
lespell/spellchecker/: __init__.py  annotations.py  candidates.py  cas_utils.py  detection.py  errors.py  preprocessing.py  ranking.py  spellchecker.py
tests/: __init__.py  test_analysis.py  test_cas_integration.py  test_core.py  test_data_prep.py  test_detection.py  test_languagetool.py  test_lespell.py  test_pyspellchecker.py  test_ranking.py  test_reader.py  test_spellchecker.py  test_writer.py
tests/fixtures/: test_corpus.xml
