[metadata]
name = lespell
version = 0.1.0
author = Your Name
author_email = you@example.com
description = A library for spelling error detection and analysis in learner corpora
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/lespell
project_urls =
    Bug Tracker = https://github.com/yourusername/lespell/issues
    Documentation = https://lespell.readthedocs.io
    Source Code = https://github.com/yourusername/lespell
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Linguistics

[options]
packages = find:
python_requires = >=3.9
install_requires =
    dkpro-cassis>=0.10.1,<0.11.0

[options.packages.find]
where = .
include = lespell*

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    ruff>=0.1.0
    mypy>=1.0
    isort>=5.12
lang =
    language-tool-python>=2.7
docs =
    sphinx>=5.0
    sphinx-rtd-theme>=1.0

[options.package_data]
lespell = py.typed

[bdist_wheel]
universal = 0
